<resources>
    <string name="app_name">ReversiGame</string>
    <string name="title_app">Reversi</string>
    <string name="ling">Linguagem</string>
    <string name="cred">Creditos</string>
    <string name="play">Jogar</string>
    <string name="perfil">Perfil</string>
    <string name="historico">Historico</string>
    <string name="sair">Sair</string>
    <string name="modo1">Modo 1</string>
    <string name="modo2">Modo 2</string>
    <string name="modo3">Modo 3</string>
    <string name="voltar">Voltar</string>
    <string name="players">Jogadores</string>
    <string name="mode">Modo de Jogo</string>
    <string name="players_name">Nome dos Jogadores</string>
    <string name="current_player">É a vez do %1$s</string>
    <string name="textTopModeManualButton">Modo Manual</string>
    <string name="textTopModeAIWeakButton">Modo Fácil</string>
    <string name="textTopModeAIStrongButton">Modo Dificil</string>
    <string name="winnerName">Ganhou o %1$s</string>
    <string name="player1">Jogador1</string>
    <string name="player2">Jogador2</string>
    <string name="name">Nome: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="player_name">Nome: </string>
    <string name="player_email">Email: </string>
    <string name="wins">Partidas ganhas: </string>
    <string name="totalplayed">Dados Partidas</string>
    <string name="mode1">Modo 1 - Jogadas: %s Vitórias: %s</string>
    <string name="mode2">Modo 2 - Jogadas: %s Vitórias: %s</string>
    <string name="peca_bomba"> Peça Bomba </string>
    <string name="troca_pecas"> Troca de Peças </string>
    <string name="profile"> Definições de Perfil </string>
    <string name="save"> Guardar </string>
    <string name="choose_photo"> Escolher foto </string>
    <string name="edit_profile"> Save </string>
    <string name="save_photo"> Guardar foto</string>
    <string name="exit_camera"> Sair</string>
    <string name="login">Login</string>
    <string name="register">Registar</string>
    <string name="ask_ip">IP do servidor:</string>
    <string name="client_mode">Modo Cliente</string>
    <string name="server_mode">Modo Servidor</string>
    <string name="msg_ip_address">IP do servidor: %s\nÀ espera de um cliente...</string>
    <string name="btn_emulator">Ligar a um emulador</string>
    <string name="error_address">Endereço não reconhecido</string>
    <string name="button_connect">Ligar</string>
    <string name="button_cancel">Cancel</string>
    <string name="server_button">Modo Servidor</string>
    <string name="client_button">Modo Cliente</string>
    <string name="txt_gravar">Guardar</string>
    <string name="total">Total Peças</string>
</resources>