<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fundo">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="90sp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_gravity="center_horizontal|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp"
        android:padding="40dp">

        <Button
            android:id="@+id/btnJogar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:layout_margin="8dp"
            android:onClick="onJogar"/>

        <Button
            android:id="@+id/btnPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:layout_margin="8dp"
            android:onClick="onPerfil"/>

        <Button
            android:id="@+id/btnHistorico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/historico"
            android:layout_margin="8dp"
            android:onClick="onHistorico"/>

        <Button
            android:id="@+id/btnSair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sair"
            android:layout_margin="8dp"
            android:onClick="onSair"/>


    </LinearLayout>
</FrameLayout>