<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fundo"
    tools:context=".Perfil">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilephoto"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="20sp"
        android:src="@drawable/error"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/choosephoto"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/choose_photo"
            android:textSize="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nometv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_name"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/nome_jog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/emailtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_email"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/email_jog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/playPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalplayed"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mode1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/mode1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mode2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/mode2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_margin="25dp">

            <Button
                android:id="@+id/editprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:layout_marginRight="20dp"
                android:textSize="10dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/realizaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginLeft="20dp"
                android:textSize="10dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>