<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="1dp">

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvInfoMode"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/mode"
                android:textSize="30sp"
                app:autoSizeMaxTextSize="25sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvInfoPlayers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/players_name"
                android:textSize="25sp"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/totalPecas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/total"
                android:textSize="20sp"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>